# machine-perception

./: .gitignore  README.md  pyproject.toml
data/: meta_test_split.json  meta_train.json  meta_valid.json
data/train/: meta_train_split.json
data_subset/: meta_test_split.json  meta_train_split.json
src/machine_perception/: utils.py
src/machine_perception/datasets/: MOSE_SAM_dataset.py  MOSE_eval_dataset.py  MOSE_train_dataset.py  sam_dataset.py  stm_dataset.py
src/machine_perception/experiments/: evaluate.ipynb  mose-evaluation.ipynb  predictor.py  stm-finetuning.ipynb  stm_finetune.ipynb  test.py  yolo.ipynb  yolo_v11.ipynb
src/machine_perception/experiments/stm/: dataset.py  helpers.py  model.py  visualize.ipynb
src/machine_perception/models/: sam2.py
src/machine_perception/models/facebook/: README.md
src/machine_perception/models/stm/: helpers.py  model.py
src/machine_perception/scripts/: run_predict.py  select_and_copy.py  train_test_split.py
